--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.7.3",
+    "moti": "^0.30.0",
     "npm": "^11.4.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -27,7 +28,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
     "start": "^5.1.0"
   },
